--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.3.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-context": "^1.0.17",
+    "auth0-js": "^9.10.1",
+    "bootstrap": "^4.3.1",
     "graphql": "^14.1.1",
+    "jquery": "^3.3.1",
+    "passport-google-oauth2": "^0.2.0",
+    "popper": "^1.0.1",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
     "react-dom": "^16.8.4",
