--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
     "apollo-client": "^2.5.1",
     "apollo-link-context": "^1.0.17",
     "auth0-js": "^9.10.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "graphql": "^14.1.1",
+    "firebase": "^5.9.1",
+    "graphql": "^14.2.0",
     "jquery": "^3.3.1",
     "passport-google-oauth2": "^0.2.0",
     "popper": "^1.0.1",
-    "react": "^16.8.4",
-    "react-apollo": "^2.5.2",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.5",
+    "react-apollo": "^2.5.3",
+    "react-datepicker": "^2.3.0",
+    "react-dom": "^16.8.5",
+    "react-loader-spinner": "^2.3.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^2.1.8",
+    "react-stripe-checkout": "^2.6.3",
     "reactstrap": "^7.1.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
