--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "auth0-js": "^9.10.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "date-fns": "^1.30.1",
     "firebase": "^5.9.1",
     "graphql": "^14.2.0",
     "jquery": "^3.3.1",
@@ -16,7 +17,9 @@
     "popper": "^1.0.1",
     "react": "^16.8.5",
     "react-apollo": "^2.5.3",
+    "react-calendar": "^2.18.1",
     "react-datepicker": "^2.3.0",
+    "react-datetime-picker": "^2.3.0",
     "react-dom": "^16.8.5",
     "react-loader-spinner": "^2.3.0",
     "react-router": "^5.0.0",
