--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "yarn && react-scripts build",
+		"build": "react-scripts build",
+		"buildyarn": "yarn react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
