--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "popper": "^1.0.1",
     "react": "^16.8.5",
     "react-apollo": "^2.5.3",
+    "react-burger-menu": "^2.6.5",
     "react-calendar": "^2.18.1",
     "react-datepicker": "^2.3.0",
     "react-datetime-picker": "^2.3.0",
