--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jquery": "^3.3.1",
     "passport-google-oauth2": "^0.2.0",
     "popper": "^1.0.1",
+    "popper.js": "^1.14.7",
+    "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-apollo": "^2.5.3",
     "react-datepicker": "^2.3.0",
@@ -23,6 +25,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
     "react-stripe-checkout": "^2.6.3",
+    "react-stripe-elements": "^2.0.3",
     "reactstrap": "^7.1.0",
     "styled-components": "^4.2.0"
   },
