--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"popper.js": "^1.14.7",
 		"react": "^16.8.6",
 		"react-apollo": "^2.5.3",
+		"react-burger-menu": "^2.6.8",
 		"react-calendar": "^2.18.1",
 		"react-datepicker": "^2.3.0",
 		"react-datetime-picker": "^2.3.0",
