--- a/package.json
+++ b/package.json
@@ -16,21 +16,27 @@
 		"passport-google-oauth2": "^0.2.0",
 		"popper": "^1.0.1",
 		"popper.js": "^1.14.7",
-		"react": "^16.8.6",
+		"react": "^16.8.5",
 		"react-apollo": "^2.5.3",
 		"react-burger-menu": "^2.6.8",
 		"react-calendar": "^2.18.1",
 		"react-datepicker": "^2.3.0",
 		"react-datetime-picker": "^2.3.0",
-		"react-dom": "^16.8.5",
+		"react-dom": "^16.8.6",
 		"react-loader-spinner": "^2.3.0",
+		"react-popper": "^1.3.3",
 		"react-router": "^5.0.0",
 		"react-router-dom": "^5.0.0",
 		"react-scripts": "^2.1.8",
 		"react-stripe-checkout": "^2.6.3",
 		"react-stripe-elements": "^2.0.3",
+		"react-transition-group": "^2.7.1",
 		"reactstrap": "^7.1.0",
 		"styled-components": "^4.2.0"
+	},
+	"resolutions": {
+		"react": "^16.0.0",
+		"react-dom": "^16.0.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
