--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
 		"auth0-lock": "^11.14.1",
 		"axios": "^0.18.0",
 		"bootstrap": "^4.3.1",
+		"d3": "^5.9.2",
 		"date-fns": "^1.30.1",
 		"graphql": "^14.2.0",
 		"jquery": "^3.3.1",
 		"passport-google-oauth2": "^0.2.0",
 		"popper": "^1.0.1",
 		"popper.js": "^1.14.7",
+		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-apollo": "^2.5.3",
 		"react-burger-menu": "^2.6.8",
